--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-@import url("https://fonts.googleapis.com/css?family=Raleway:100,400,600");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans");
 /*!
  * Bootstrap v3.3.7 (http://getbootstrap.com)
  * Copyright 2011-2016 Twitter, Inc.
@@ -1377,7 +1377,7 @@ html {
 }
 
 body {
-  font-family: "Raleway", sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-size: 14px;
   line-height: 1.6;
   color: #636b6f;
@@ -5145,7 +5145,7 @@ tbody.collapse.in {
 }
 
 .navbar-default {
-  background-color: rgba(255, 255, 255, 0);
+  background-color: #fff;
   border-color: #d3e0e9;
 }
 
@@ -5173,7 +5173,7 @@ tbody.collapse.in {
 
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
   color: #555;
-  background-color: rgba(238, 238, 238, 0);
+  background-color: #eeeeee;
 }
 
 .navbar-default .navbar-nav > .disabled > a, .navbar-default .navbar-nav > .disabled > a:hover, .navbar-default .navbar-nav > .disabled > a:focus {
@@ -5199,7 +5199,7 @@ tbody.collapse.in {
 }
 
 .navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
-  background-color: rgba(238, 238, 238, 0);
+  background-color: #eeeeee;
   color: #555;
 }
 
@@ -5213,7 +5213,7 @@ tbody.collapse.in {
   }
   .navbar-default .navbar-nav .open .dropdown-menu > .active > a, .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
     color: #555;
-    background-color: rgba(238, 238, 238, 0);
+    background-color: #eeeeee;
   }
   .navbar-default .navbar-nav .open .dropdown-menu > .disabled > a, .navbar-default .navbar-nav .open .dropdown-menu > .disabled > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > .disabled > a:focus {
     color: #ccc;
@@ -6867,7 +6867,7 @@ button.close {
   position: absolute;
   z-index: 1070;
   display: block;
-  font-family: "Raleway", sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-style: normal;
   font-weight: normal;
   letter-spacing: normal;
@@ -7001,7 +7001,7 @@ button.close {
   display: none;
   max-width: 276px;
   padding: 1px;
-  font-family: "Raleway", sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-style: normal;
   font-weight: normal;
   letter-spacing: normal;
@@ -7689,7 +7689,8 @@ button.close {
 }
 
 html, body {
-  background-color: #f5f8fa;
+  background-color: #0E101D;
+  color: #fff;
   font-family: 'Open Sans', sans-serif;
   font-weight: 100;
   height: 100vh;
@@ -7709,27 +7710,14 @@ html, body {
   justify-content: center;
 }
 
+.position-ref {
+  position: relative;
+}
+
 .top-right {
   position: absolute;
   right: 10px;
   top: 18px;
-}
-
-.top-left {
-  position: absolute;
-  left: 10px;
-  top: 18px;
-}
-
-.logo {
-  width: 985px;
-}
-
-.user-select-false, html, body {
-  user-select: none;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
 }
 
 .content {
@@ -7737,11 +7725,7 @@ html, body {
 }
 
 .title {
-  font-size: 74px;
-  letter-spacing: 5px;
-  text-transform: uppercase;
-  color: #fff;
-  cursor: default;
+  font-size: 84px;
 }
 
 .links > a {
@@ -7752,16 +7736,10 @@ html, body {
   letter-spacing: .1rem;
   text-decoration: none;
   text-transform: uppercase;
-  -webkit-transition: .2s;
-  transition: .2s;
-}
-
-.links > a:hover {
-  color: orange;
 }
 
 .m-b-md {
   margin-bottom: 30px;
 }
 
-/*# sourceMappingURL=app.css.map */
+/*# sourceMappingURL=home.css.map */
