--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,9 +1,80 @@
+@import url('https://fonts.googleapis.com/css?family=Raleway:100,400,600');
 
-// Fonts
-@import url(https://fonts.googleapis.com/css?family=Raleway:300,400,600);
-
-// Variables
 @import "variables";
 
-// Bootstrap
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
+
+
+
+
+html, body {
+    background-color: $body-bg;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 100;
+    height: 100vh;
+    margin: 0;
+    @extend .user-select-false;
+}
+
+.full-height {
+    height: 100vh;
+}
+
+.flex-center {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
+
+.top-right {
+    position: absolute;
+    right: 10px;
+    top: 18px;
+}
+
+.top-left {
+    position: absolute;
+    left: 10px;
+    top: 18px;
+}
+
+.logo {
+    width: 985px;
+}
+
+.user-select-false {
+    user-select: none;
+    -webkit-user-select: none; 
+    -moz-user-select: none;     
+    -ms-user-select: none; 
+}
+
+.content {
+    text-align: center;
+}
+
+.title {
+    font-size: 74px;
+    letter-spacing: 5px;
+    text-transform: uppercase;
+    color: #fff;
+    cursor: default;
+}
+
+.links > a {
+    color: #fff;
+    padding: 0 25px;
+    font-size: 12px;
+    font-weight: 600;
+    letter-spacing: .1rem;
+    text-decoration: none;
+    text-transform: uppercase;
+    transition: .2s;
+    &:hover {
+        color: orange;
+    }
+}
+
+.m-b-md {
+    margin-bottom: 30px;
+}
