--- a/public/css/overwrite.css
+++ b/public/css/overwrite.css
@@ -1,14 +1,1 @@
-.centerComponent {
-  position: relative;
-  display: -webkit-box;
-  display: flex;
-  -webkit-box-pack: center;
-  justify-content: center;
-}
-
-.centerPanel {
-  width: 750px;
-  height: auto;
-}
-
-/*# sourceMappingURL=overwrite.css.map */
+.centerComponent{position:relative;display:-webkit-box;display:flex;-webkit-box-pack:center;justify-content:center}.centerPanel{width:750px;height:auto}
