--- a/resources/assets/sass/style.scss
+++ b/resources/assets/sass/style.scss
@@ -546,9 +546,20 @@ iframe {
   z-index: 150;
 }
 
+.video-container {
+  position: absolute;
+  top: 0;
+}
+
 .main--logo {
   display: absolute;
+  top: 0;
+  left: 0;
+  margin: 0 auto;
   z-index: 1;
+  @media (max-width: 400px) {
+    display: none;
+  }
 }
 
 .home-wrapper h2 {
